# ChangeLog for dev-util/catalyst
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/catalyst/ChangeLog,v 1.208 2009/05/03 16:48:36 agaffney Exp $

  03 May 2009; Andrew Gaffney <agaffney@gentoo.org> catalyst-9999.ebuild:
  Adding ${PN} to ${S} for -9999 to make it work everywhere

*catalyst-2.0.6.903 (20 Dec 2008)

  20 Dec 2008; Andrew Gaffney <agaffney@gentoo.org>
  -catalyst-2.0.6.902.ebuild, +catalyst-2.0.6.903.ebuild:
  Bump to 2.0.6.903 and remove .902 ebuild

*catalyst-2.0.6.902 (07 Dec 2008)

  07 Dec 2008; Andrew Gaffney <agaffney@gentoo.org>
  +catalyst-2.0.6.902.ebuild:
  Version bump to testing version 2.0.6.902

  11 Oct 2008; Robin H. Johnson <robbat2@gentoo.org> catalyst-9999.ebuild:
  Move live ebuild to using new Git per bug #236145

  12 Jun 2008; Chris Gianelloni <wolf31o2@gentoo.org> catalyst-2.0.6.ebuild,
  catalyst-9999.ebuild:
  Remove ChangeLog.old from dodoc, fix SRC_URI, and sync the 2.0.6 and 9999
  ebuilds.

  05 Jun 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  -catalyst-2.0.5.ebuild, catalyst-2.0.6.ebuild:
  Change SRC_URI to point to wolf31o2.org, where I'll be putting future
  catalyst releases.

  29 May 2008; Chris Gianelloni <wolf31o2@gentoo.org> catalyst-2.0.6.ebuild:
  Marking stable for use for 2008.0's release.

*catalyst-2.0.6 (29 May 2008)

  29 May 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  -catalyst-2.0.6_pre17.ebuild, +catalyst-2.0.6.ebuild:
  Version bump to 2.0.6 final for release.

  03 May 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  -catalyst-2.0.6_pre15.ebuild, -catalyst-2.0.6_pre16.ebuild,
  catalyst-2.0.6_pre17.ebuild, catalyst-9999.ebuild:
  Removing older versions and cleaning up dodoc.

  07 Apr 2008; Doug Goldstein <cardoe@gentoo.org>
  catalyst-2.0.6_pre17.ebuild:
  ChangeLog.old doesn't exist in the tarball

*catalyst-2.0.6_pre17 (06 Apr 2008)

  06 Apr 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  +catalyst-2.0.6_pre17.ebuild: