@@ -1,6 +1,12 @@
 # ChangeLog for dev-util/catalyst
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/catalyst/ChangeLog,v 1.208 2009/05/03 16:48:36 agaffney Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/catalyst/ChangeLog,v 1.209 2009/05/03 16:52:13 agaffney Exp $
+
+*catalyst-2.0.6.904 (03 May 2009)
+
+  03 May 2009; Andrew Gaffney <agaffney@gentoo.org>
+  +catalyst-2.0.6.904.ebuild:
+  Add catalyst-2.0.6.904 to the tree
 
   03 May 2009; Andrew Gaffney <agaffney@gentoo.org> catalyst-9999.ebuild:
   Adding ${PN} to ${S} for -9999 to make it work everywhere
